syntax = "proto3";

option csharp_namespace = "Soundy.SharedLibrary.Contracts.User";

service UserGrpcService {
    rpc Create (CreateRequest) returns (CreateResponse);
    rpc GetById (GetByIdRequest) returns (GetByIdResponse);
    rpc Update (UpdateRequest) returns (UpdateResponse);
    rpc Delete (DeleteRequest) returns (DeleteResponse);
    rpc Search (SearchRequest) returns (SearchResponse);
}

//======== Requests ========
message CreateRequest{
    string username = 1;
    string email = 3;
}

message GetByIdRequest {
    string id = 1;
}

message UpdateRequest {
    string id = 1;
    string username = 2;
    string email = 3;
}

message DeleteRequest {
    string id = 1;
}

message SearchRequest {
    string pattern = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

//======== Responses ========
message CreateResponse{
    string id = 1;
    string username = 2;
    string email = 3;
}

message UpdateResponse {
    string id = 1;
    string username = 2;
    string email = 3;
}

message GetByIdResponse {
    string id = 1;
    string username = 2;
    string email = 3;
}

message DeleteResponse{
    bool is_success = 1;
}

message SearchResponse {
    repeated UserData users = 1;
    int32 page_number = 2;
    int32 page_size = 3;
}

message UserData{
    string id = 1;
    string username = 2;
    string email = 3;
}